--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 file.reference.HTML5Application1-public_html=public_html
 file.reference.HTML5Application1-test=test
+file.reference.myWeb-public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.HTML5Application1-public_html}
-test.folder=${file.reference.HTML5Application1-test}
+site.root.folder=${file.reference.myWeb-public_html}
